# pagure

./: .gitignore  LICENSE  README.md  install-java.sh  install-softs.sh  pagure.sh  pyproject.toml  setup.py
doc/: Documentation.odt  Documentation_FR.odt
include/: 00-system-centos.sh  00-system-fedora.sh  00-system-mint.sh  00-system-suse.sh  01-defaults.sh  01-mpi-libs.sh  02-mpi-libs.sh  03-io-libs.sh  04-processing.sh  05-python.sh  06-python-modules.sh  08-model-terraferma-v1.0.sh  10-model-fluidity.sh  10-model-swan.sh  10-model-telemac.sh  11-model-delft.sh  11-model-terraferma-v1.0.sh  110-model-delft3d.sh  12-model-fluidity.sh  12-model-swan.sh  120-model-swan.sh  filters.sh
include/builder/: SuiteSparse.sh  aed2.sh  autoconf.sh  autogen.sh  bazel.sh  boost.sh  cmake-builder.sh  cmake.sh  composer.sh  configure.sh  delft3d.sh  ecbuild.sh  fluidity.sh  gcc.sh  gir_configure.sh  gir_meson.sh  gmt5.sh  gmt6.sh  lamem.sh  lapack.sh  mesa.sh  meson.sh  metis.sh  mumps.sh  no_build.sh  nodejs.sh  numpy.sh  parmetis.sh  pendulum.sh  ptscotch.sh  pybind11.sh  pycairo.sh  python-builder.sh  python.sh  refdif.sh  scipy.sh  scotch.sh  singularity.sh  spud-tferma-v1.0.sh  staticx.sh  (+8 more)
include/group/: 0-system-centos.sh  0-system-fedora.sh  0-system-macos.sh  0-system-mint.sh  0-system-suse.sh  0-system-ubuntu.sh  00-system-centos.sh  00-system-fedora.sh  00-system-mint.sh  00-system-suse.sh  01-mpi-libs.sh  01-python.sh  02-common.sh  02-default.sh  02-python.sh  03-common.sh  03-io.sh  03-python-modules.sh  04-io.sh  04-mpi-libs.sh  05-common.sh  05-processing.sh  05-python.sh  06-io.sh  06-python-modules.sh  07-model-telemac.sh  07-processing.sh  08-model-telemac.sh  08-model-terraferma-v1.0.sh  09-model-fluidity.sh  09-web.sh  1-python.sh  10-python-tools.sh  100-python-tools.sh  100-web.sh  11-model-delft3d.sh  11-model-deltares.sh  110-model-delft3d.sh  12-model-hydro.sh  12-model-swan.sh  (+16 more)
pagure/: __init__.py  __main__.py  configuration.py
pagure/cli/: autocompletion.py  base_command.py  cmdoptions.py  main.py  main_parser.py
pagure/cli/commands/: __init__.py  configuration.py
pagure/exceptions/: exceptions.py
pagure/utils/: appdirs.py  deprecation.py  logging.py  misc.py  packaging.py  retry.py
pagure/utils/metadata/: base.py
src/pagure/: __init__.py  __main__.py  __pip-runner__.py  configuration.py
src/pagure/_internal/: __init__.py  build_env.py  cache.py  exceptions.py  pagure_builder.py  pyproject.py  self_outdated_check.py  wheel_builder.py
src/pagure/_internal/commands/: __init__.py  cache.py  check.py  completion.py  configuration.py  debug.py  download.py  freeze.py  hash.py  help.py  index.py  inspect.py  install.py  list.py  lock.py  search.py  show.py  uninstall.py  wheel.py
src/pagure/_internal/distributions/: __init__.py  base.py  installed.py  sdist.py  wheel.py
src/pagure/_internal/index/: collector.py  package_finder.py  sources.py
src/pagure/_internal/locations/: __init__.py  _distutils.py  _sysconfig.py
src/pagure/_internal/metadata/: __init__.py  base.py  pkg_resources.py
src/pagure/_internal/models/: candidate.py  format_control.py  index.py  installation_report.py  link.py  pylock.py  search_scope.py  selection_prefs.py  target_python.py  wheel.py
src/pagure/_internal/network/: auth.py  cache.py  download.py  lazy_wheel.py  session.py  utils.py  xmlrpc.py
src/pagure/_internal/operations/: check.py  freeze.py  prepare.py
src/pagure/_internal/req/: __init__.py  constructors.py  req_dependency_group.py  req_file.py  req_install.py  req_set.py  req_uninstall.py
src/pagure/_internal/resolution/: base.py
src/pagure/_internal/utils/: _log.py  compat.py  compatibility_tags.py  deprecation.py  direct_url_helpers.py  egg_link.py  entrypoints.py  filesystem.py  filetypes.py  hashes.py  logging.py  misc.py  packaging.py  subprocess.py  temp_dir.py  unpacking.py  wheel.py
src/pagure/_internal/vcs/: __init__.py  bazaar.py  git.py  mercurial.py  subversion.py  versioncontrol.py
src/pagure/_vendor/: README.rst  __init__.py  typing_extensions.py  vendor.txt
src/pagure/_vendor/cachecontrol/: __init__.py  _cmd.py  adapter.py  controller.py  heuristics.py  serialize.py  wrapper.py
src/pagure/_vendor/certifi/: __main__.py  core.py
src/pagure/_vendor/dependency_groups/: _implementation.py  _toml_compat.py
src/pagure/cli/: __init__.py  autocompletion.py  base_command.py  cmdoptions.py  index_command.py  main.py  main_parser.py  parser.py  progress_bars.py  req_command.py  spinners.py
src/pagure/utils/: appdirs.py  compat.py  deprecation.py  entrypoints.py  filesystem.py  logging.py  misc.py  packaging.py  retry.py  temp_dir.py
(+108 files in other folders)
