# MIT License
# Copyright (c) 2025 [Ton Nom ou ta société]
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[project]
name = "pagure"
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
authors = [
  {name = "Fabien RÉTIF", email = "fabien.retif@snale.net"},
  {name = "Benjamin GUENOUN", email = "benjamin.guenoun@snale.net"},
]
description = "PAGURE is a tool for compiling numerical models and their dependencies"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.scripts]
pagure = "pagure.cli.main:main"

[project.urls]
Homepage = "https://lab.snale.net/produits/pagure"
Documentation = "https://github.com/snale-net/pagure/blob/master/README.md"
Repository = "https://github.com/snale-net/pagure"

[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "pagure.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["doc"]

[tool.setuptools.package-data]
"pagure" = ["py.typed"]
"pagure._vendor" = ["vendor.txt"]
"pagure._vendor.certifi" = ["*.pem"]
"pagure._vendor.distlib" = [
    "t32.exe",
    "t64.exe",
    "t64-arm.exe",
    "w32.exe",
    "w64.exe",
    "w64-arm.exe",
]